[metadata]
name = Fast Playground
summary = Playground for working with github actions and FastAPI
description-file = README.md

[flake8]
max-line-length = 120

[tool:pytest]
addopts = --cov=pharmacy --disable-pytest-warnings -vv --cov-append --cov-report=term-missing --cov-report=html:cov_html

[isort]
profile=black
known_first_party=pharmacy
multi_line_output=3
line_length = 120
sections=STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[mypy]
python_version = 3.9
files = src/**/*.py
ignore_missing_imports = True
check_untyped_defs = False
strict_optional = False
show_error_codes = True
disable_error_code = misc, var-annotated
